--- a/package.json
+++ b/package.json
@@ -1,29 +1,26 @@
 {
-	"//1": "describes your app and its dependencies",
-	"//2": "https://docs.npmjs.com/files/package.json",
-	"//3": "updating this file will download and update your packages",
-	"name": "my-hyperdev-app",
+	"name": "fcc-mocha-chai",
 	"version": "0.0.1",
-	"description": "What am I about?",
+	"description": "FCC QA and Testing with Chai Challenges Boilerplate.",
 	"main": "server.js",
 	"scripts": {
 		"start": "node server.js"
 	},
 	"dependencies": {
 		"express": "^5.0.0-alpha.2",
-		"body-parser": "^1.15.2",
+		"body-parser": "^1.18.3",
 		"mocha": "^3.1.0",
-		"chai": "^3.5.0",
-		"chai-http": "^3.0.0",
-		"zombie": "^4.2.1",
-		"cors": "^2.8.1"
+		"chai": "^4.2.0",
+		"chai-http": "^4.2.0",
+		"zombie": "^6.1.3",
+		"cors": "^2.8.4"
 	},
 	"engines": {
-		"node": "4.4.5"
+		"node": "8.x"
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://hyperdev.com/#!/project/welcome-project"
+		"url": "https://github.com/freeCodeCamp/boilerplate-mochachai"
 	},
 	"keywords": [
 		"node",
