--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 	"dependencies": {
 		"express": "^5.0.0-alpha.2",
 		"body-parser": "^1.18.3",
-		"mocha": "^3.1.0",
+		"mocha": "^5.2.0",
 		"chai": "^4.2.0",
 		"chai-http": "^4.2.0",
 		"zombie": "^6.1.3",
@@ -20,7 +20,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/freeCodeCamp/boilerplate-mochachai"
+		"url": "https://github.com/freeCodeCamp/boilerplate-mochachai.git"
 	},
 	"keywords": [
 		"node",
