--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "chai-http": "4.3.0",
     "cors": "2.8.5",
     "express": "4.17.1",
-    "mocha": "9.0.3",
+    "mocha": "^9.2.2",
     "zombie": "6.1.4"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "localhost": "^0.4.1",
+    "start-server-and-test": "^1.14.0"
+  }
 }
