--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "body-parser": "1.19.0",
-    "chai": "4.3.4",
+    "body-parser": "^1.20.2",
     "chai-http": "4.3.0",
     "cors": "2.8.5",
-    "express": "4.17.1",
-    "mocha": "9.0.3",
+    "express": "^4.18.2",
+    "mocha": "^9.2.2",
     "zombie": "6.1.4"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "chai": "^4.3.7"
+  }
 }
