--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "cors": "2.8.5",
     "express": "^4.18.2",
     "mocha": "^9.2.2",
-    "zombie": "6.1.4"
+    "zombie": "^6.1.4"
   },
   "license": "MIT",
   "devDependencies": {
