--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "body-parser": "^1.20.2",
     "chai-http": "4.3.0",
     "cors": "2.8.5",
-    "express": "^4.18.2",
+    "express": "4.18.2",
     "mocha": "^9.2.2",
-    "zombie": "^6.1.4"
+    "zombie": "6.1.4"
   },
   "license": "MIT",
   "devDependencies": {
